# syswall

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: app.rs  logger.rs  main.rs
lib/: Cargo.toml
lib/src/: app.rs  child_process.rs  lib.rs  syscalls.rs  tracer_conf.rs  user_response.rs
lib/src/process_state/: files.rs  sockets.rs
src/: app.rs  app_config.rs  child_process.rs  cli.rs  main.rs  process_conf.rs  process_state.rs  syscalls.rs
src/process_state/: mod.rs  sockets.rs
