[package]
name = "syswall"
version = "0.3.0"
authors = ["Simon Pugnet <simon@polaris64.net>"]
edition = "2018"
description = "syswall: a firewall for syscalls"
keywords = ["linux", "syscalls", "security", "analysis", "tracing"]
categories = ["command-line-utilities", "development-tools::debugging", "os::unix-apis"]
license = "LGPL-3.0-only"
repository = "https://github.com/polaris64/syswall"
homepage = "https://www.polaris64.net/blog/programming/2019/syswall-a-firewall-for-syscalls"
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2.48"
log = "0.4.6"
nix = "0.13.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.8"

[lib]
name = "syswall"
path = "src/lib.rs"
